force-app/main/default/objects/Medical_Record__c/Medical_Record__c.object-meta.xml
<CustomObject>
    <label>Medical Record</label>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Medical Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>