force-app/main/default/objects/Medical_Record__c/fields/Perscription__c.field-meta.xml
<CustomField>
    <fullName>Perscription__c</fullName>
    <label>Perscription</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>