force-app/main/default/objects/Medical_Record__c/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <label>Treatment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>